[pom] Remove old attach allow to self as no longer needed